package ebikes.domain.model;

case class EBike(id: EBikeId, location: P2D, direction: V2D, speed: Double)
