@startuml domain-model

class Admin

struct Credit {
    amount: Int
}

class User {
    password: String
}
struct UserId {
    value: String
}
User "1" -u-> "username 1" UserId
' blank label just for layout
User "1" -r-> "credits 1" Credit : "                   "


class EBike {
    location: P2d
    direction: V2d
    speed: Double
}
struct EBikeId {
    value: String
}
EBike "1" -u-> "id 1" EBikeId


class Ride {
    start: DateTime
    end: DateTime?
}
struct RideId {
    value: String
}
Ride "1" -u-> "id 1" RideId
Ride "0..*" --> "1" EBikeId
Ride "0..*" --> "1" UserId

@enduml
